# llm-wiki

./: .gitignore  AGENTS.md  CHECK_PLAN.md  CLAUDE.md  DESIGN_atomic-local-ingest.md  DESIGN_chunked-extraction.md  DESIGN_cloud-model-backends.md  DESIGN_ingestion-improvements.md  DESIGN_local-model-context-limits.md  DESIGN_repair-and-context-v2.md  DESIGN_repair-and-context.md  DESIGN_smart-ingestion.md  PLAN_bedrock-backend.md  README.md  SCHEMA.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  query-meta.json  query-output.md  query-prompt.md  requirements.txt  timeseries-log.md
harness/: pyproject.toml
harness/cache/401a7353e95bd487/: document_model.json  manifest.json  source_sections.json
harness/cache/401a7353e95bd487/chunks/: 0001.md  0002.md  0003.md  0004.md  0005.md
harness/cache/54eac7108146a511/: document_model.json  manifest.json  source_sections.json
harness/cache/54eac7108146a511/chunks/: 0001.md  0002.md  0003.md
harness/cache/c98ab3e62b35ab0f/: document_model.json  manifest.json  ocr.json  source_sections.json
harness/cache/e5870dca757ef182/: document_model.json  manifest.json  ocr.json  source_sections.json
harness/src/llmwiki/: __init__.py  cli.py  config.py
harness/tests/: conftest.py  fakes.py  helpers.py  source_claim_quality_fixtures.py  test_article_lint.py  test_article_viability.py  test_bounded_text.py  test_chat_domain.py  test_chat_e2e.py  test_chat_ports.py  test_chat_store.py  test_check_plan_contract.py  test_claim_ledger_adoption.py  test_claim_support_audit.py  test_claim_support_sampling.py  test_claim_support_workflow.py  test_cli_config.py  test_compiler_candidate_admission.py  test_cross_source.py  test_diagnostic_domain.py  test_diagnostic_repair_loop.py  test_docling_extractor.py  test_docling_windows.py  test_domain.py  test_domain_language_consistency.py  test_domain_vocabulary.py  test_evidence_locator_index.py  test_evidence_pack_contract.py  test_evidence_registry.py  test_heading_table_recovery.py  test_human_article_renderer.py  test_ingest_compiler.py  test_ingest_confidence_pdf_cache.py  test_ingest_confidence_persisted_artifacts.py  test_ingest_confidence_report.py  test_ingest_profiles.py  test_ingest_route_page_plan_scope.py  test_ingest_route_tool_recovery.py  test_knowledge_shapes.py  test_ledger_aggregate.py  (+66 more)
(+12156 files in other folders)
