[project]
name = "llm-wiki-workspace"
version = "0.1.0"
description = "Workspace wrapper for the local LLM-Wiki harness."
requires-python = ">=3.12"
dependencies = [
    "llmwiki",
]

[tool.uv.sources]
llmwiki = { path = "harness", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "forge.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["Foundation", "Vision", "Quartz"]
ignore_missing_imports = true
